--- a/index.html
+++ b/index.html
@@ -3,15 +3,17 @@
 <head>
     <title>Minu esimene veebileht</title>
     <meta charset="utf-8">
+    <link rel='stylesheet' type='text/css' href='style.css'>
 </head>
 <body>
     <h1>Norra suur vaatamisväärsus Geirangerfjorden</h1>
-    <p>Geirangerfjorden ehk Geirangeri fjord on fjord Norra lääneosas Møre og Romsdali maakonnas Sunnmøre piirkonnas, linnulennult 200 km Bergenist kirdes ja 280 km Oslost loodes. Fjord on 15 kilomeetri pikkune ja 0,6–1,3 km laiune. Ta on üks Storfjordeni harudest, ulatudes kaugemale sisemaale kui ükski teine haru. Ta ulatub umbes 100 km kaugusele mandri sisemusse. Tema tippu suubub Geirangelva jõgi. Fjordi tipus, kus Geirangelva fjordi suubub, asub Geirangeri küla ja suudmes Hellesylti küla.</p>
+    <p class="sisu">Geirangerfjorden ehk Geirangeri fjord on fjord Norra lääneosas Møre og Romsdali maakonnas Sunnmøre piirkonnas, linnulennult 200 km Bergenist kirdes ja 280 km Oslost loodes. Fjord on 15 kilomeetri pikkune ja 0,6–1,3 km laiune. Ta on üks Storfjordeni harudest, ulatudes kaugemale sisemaale kui ükski teine haru. Ta ulatub umbes 100 km kaugusele mandri sisemusse. Tema tippu suubub Geirangelva jõgi. Fjordi tipus, kus Geirangelva fjordi suubub, asub Geirangeri küla ja suudmes Hellesylti küla.</p>
     <br>
     <a href="https://www.visitnorway.com/places-to-go/fjord-norway/the-geirangerfjord/">Visitnorway veebileht</a>
+    <br>
     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Geirangerfjord_.jpg/396px-Geirangerfjord_.jpg" alt="Pilt fjordidest">
     <h2>Tegevused piirkonnas:</h2>
-    <ul>
+    <ul class="sisu">
         <li>Matkamine
         <ul><li>Mägedes ekstreemmatkad</li>
             <li>Lihtsamad matkad</li></ul>
@@ -27,17 +29,17 @@
             <th>Vaatamist väärivad mahajäetud farmid</th>
             <th>Ümbritsevad asulad</th>
         </tr>
-        <tr>
+        <tr class="sisu">
             <td>Seitsme õe juga</td>
             <td>Skageflå</td>
             <td>Geiranger</td>
         </tr>
-        <tr>
+        <tr class="sisu">
             <td>Friareni juga</td>
             <td>Knivsflå</td>
             <td>Hellesylt</td>
         </tr>
-        <tr>
+        <tr class="sisu">
             <td>Pulmaloori juga</td>
             <td>Blomberg</td>
             <td>Ålesund</td>
